fix: Fixed navbar & footer on mobile

--- a/src/client/public/css/login.css
+++ b/src/client/public/css/login.css
@@ -210,6 +210,7 @@ body {
     left: 50%;
     bottom: 0;
     transform: translateX(-50%);
+    width: 100%;
 }
 
 .page-footer .footer-copyright a,
