--- a/src/client/public/css/main.css
+++ b/src/client/public/css/main.css
@@ -395,6 +395,7 @@ body {
     left: 50%;
     bottom: 0;
     transform: translateX(-50%);
+    width: 100%;
 }
 
 .page-footer .footer-copyright a,
