--- a/src/client/public/css/public.css
+++ b/src/client/public/css/public.css
@@ -99,7 +99,7 @@ body {
 
 .navbar {
     background-color: var(--ssm-sidebar-bg-colour);
-    height: 60px;
+    min-height: 60px;
 }
 
 .navbar a {
@@ -127,6 +127,18 @@ body {
 
 .navbar .nav-item:hover {
     background-color: var(--ssm-btn-bg-colour);
+}
+
+.navbar-toggler {
+    position: absolute;
+    top: 11px;
+    right: 12px;
+    border-color: var(--ssm-btn-border-colour);
+    background-color: var(--ssm-btn-bg-colour);
+}
+
+.navbar-toggler:hover {
+    background-color: var(--ssm-btn-bg-hover-colour);
 }
 
 .bg-glass {
@@ -202,6 +214,7 @@ body {
     left: 50%;
     bottom: 0;
     transform: translateX(-50%);
+    width: 100%;
 }
 
 .page-footer .footer-copyright a,
